Added simple hiera endpoints. In where you can manage hiera
